--- a/src/pages/invites/index.astro
+++ b/src/pages/invites/index.astro
@@ -5,7 +5,6 @@ import { allInviteSorted } from "../../../backend/backend.mjs";
 const { id } = Astro.params;
 const invites = await allInviteSorted();
 import heroinvite from "../../assets/images/hero_invites.avif";
-import heroinvite2 from "../../assets/images/hero_invites2.avif";
 ---
 
 <Layout>
@@ -19,7 +18,7 @@ import heroinvite2 from "../../assets/images/hero_invites2.avif";
                 />
                 <img
                     class="hidden lg:block w-full h-[400px] object-cover rounded-lg"
-                    src={heroinvite2.src}
+                    src={heroinvite.src}
                     alt="Bannière invités du festival"
                 />
                 <h1
