--- a/src/pages/billetterie.astro
+++ b/src/pages/billetterie.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import herobilletterie from "../assets/images/hero_billetterie.avif";
-import herobilletterie2 from "../assets/images/hero_billetterie2.avif";
 ---
 
 <Layout>
@@ -16,7 +15,7 @@ import herobilletterie2 from "../assets/images/hero_billetterie2.avif";
                 />
                 <img
                     class="hidden lg:block w-full h-[600px] object-cover rounded-lg"
-                    src={herobilletterie2.src}
+                    src={herobilletterie.src}
                     alt="Bannière billetterie"
                 />
                 <h1
