--- a/src/pages/infos.astro
+++ b/src/pages/infos.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import heroinfos from "../assets/images/hero_infos.avif";
 import herobilleterie from "../assets/images/hero_billetterie.avif";
-import gare from "../assets/images/gare.avif";
+import gare from "../assets/images/gare_ornans.avif";
 ---
 
 <Layout>
