--- a/src/pages/programmation/index.astro
+++ b/src/pages/programmation/index.astro
@@ -4,10 +4,10 @@ import Layout from "../../layouts/Layout.astro";
 import FilmCard from "../../components/CardFilm.astro";
 import { allFilmSorted } from "../../../backend/backend.mjs";
 const Film = await allFilmSorted();
-import heroprog from "../assets/images/hero_prog.avif";
-import heroprog2 from "../assets/images/prog_accueil.avif";
-import masterclass from "../assets/images/masterclass.avif";
-import musee from "../assets/images/musee.avif";
+import heroprog from "../../assets/images/hero_prog.avif";
+import heroprog2 from "../../assets/images/prog_accueil.avif";
+import masterclass from "../../assets/images/masterclass.avif";
+import musee from "../../assets/images/musee.avif";
 ---
 
 <Layout>
